Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23600

Fix QDoc warnings for Find classes

XMLWordPrintable

    • 8046e3311f225c1224527157d0a3e27b8e980736 (qt-creator/qt-creator/4.12)
    • DaVinci sprint 3

      Fix issues that cause warnings for documented classes and mark undocumented classes \internal inĀ /src/plugins/coreplugin/find/.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            leenam Leena Miettinen
            leenam Leena Miettinen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes